--- a/2023.08.28TIL.md
+++ b/2023.08.28TIL.md
@@ -1,4 +1,4 @@
-## 1.첫번째 레벨과 두번째 레벨을 이어주는 블루프린터 작성 방법
+## 1.첫번째 레벨과 두번째 레벨을 이어주는 블루프린트 작성 방법
 
 처음에는 레벨을 이을생각이 없었다 하지만 첫 레벨이 분위기는 있지만 분위기에 비해 들어간거 없어서
 특정 구역으로 이동할시 다음레벨로 넘어가는 기능을 추가하였다.
