--- a/2023.08.30 TIL.md
+++ b/2023.08.30 TIL.md
@@ -1,1 +1,35 @@
-# TIL
+## 1.문 열고 닫는 애니메이션
+2번째맵의 복도는 문들이 쫙있는데 1개의 방을만들어서 그쪽의 문은 근처로 갔을때 열리고 닫히게 끔 만들었다 
+
+사실 지금 맵의 분위기와 문이랑 서로 매치가 잘안되서 고민을 좀 했는데 각기 다른문들을 배치해서 약간의 혼돈? 혼란?
+
+이라는것으로 가면 좋을거 같다고 생각했다. 여닫는 애니메이션은 사실 그리 어렵지도 쉽지도 않은 과제였다.
+
+다만 조금 불편한점이라면 문틀따로 문 따로 해야 애니메이션이 먹혀 들어간다는것이다 물론 그렇게 해야 되는것은 맞지만
+
+사실 좋은 프로그램이라 그냥 문하나 가져다 놓고 애니메이션 넣으면 될줄 알았다.. 하지만 현실은 그렇지 않았다.
+
+https://www.youtube.com/watch?v=4KlQCaSmJCc&t=310s&ab_channel=%EC%8A%AC%EA%B8%B0%EB%A1%9C%EC%9A%B4%EC%8A%A4%EC%BA%94%EC%83%9D%ED%99%9C
+
+## 2.1번째 맵 불빛 깜빡이는 애니메이션 수정
+처음 이 깜빡이는 애니메이션을 만들때 는 '음 완벽해' 라고 생각은 했지만 뭔가 하루하루 지나고 보면볼수록 마음에들지 않았다.
+
+수정하기 전의 애니메이션은 뭐랄까? 깜빡인다는 느낌은 맞는데.. 경보울리는것 처럼 깜빡여서 무서운 분위기가 조성되는것이 아니라
+
+긴박한 분위기를 조성한것 같아서 애니메이션 자체를 전면 수정하였다. 
+
+애니메이션을 수정할때 시뮬레이션을 실행시켜서 보면서 수정하면 조금더 원활한 작업을 할수있다.
+
+
+
+## 3.2번째 맵에서 의 조명 전체 수정
+2번째 맵은 복도형식인데 맵 끝쪽은 어두운 빨간색 조명을 이용하였고 나머지는 약간 어두운 회색빛이었다 
+
+하지만 아무리 수치를 바꾸고 해도 뭔가 이상한거 같아서 배치를 바꾸어보았다 어두운 빨간색 조명을 복도 전체에 배치하고
+
+마지막 구간에 밝은 조명을 배치하니 분위기가 더 좋아진 느낌이다 진작에 배치를 바꿔볼걸 그랬다.
+
+원래 리미널 스페이스(친숙한공간 이지만 어딘가 모르게 무서운느낌)을 만들려고 했지만 뭔가 손보면 손볼수록
+
+그냥 공포게임에 나오는 공포맵을 만들고 있는 느낌이다. 뭐..분위기만 무섭다면야..괜찮은거 같다.
+
