--- a/2023.08.31.TIL.md
+++ b/2023.08.31.TIL.md
@@ -1,9 +1,21 @@
 ## 1.레벨디자인
+레벨디자인은 공간을 만드는 작업을 말한다
+
+게임속의 공간은 지역으로 구체화된다
+
+모든 미션에는 이야기가 있고 배치되어있는 물체는 이유없이 배치되어있지는 않다
+
+간단한 프로토타입을 통해 시각화하는것이 좋다 
+
+관련주제 또는 소재 항목별로 영화를 검색하여 감상하여 영감을 얻어보자
+
+
+
 ## 2.레벨디자인 포트폴리오를 위한 사전조사
 
 일본 기차역(시모나다역)
 
-
+![캡처](https://github.com/kdw1234/TIL/assets/57427834/9559bf7d-7c35-44a6-b63d-3bf36d2918f1)
 
 에히메현 요산선 해안가 무인역
 
@@ -18,3 +30,19 @@
 새로운 노선이 신설된후 역사쪽의 철도노선을 철거하였다 
 
 센과 치히로의 행방불명에서 나오는 물위에 있는기차역이 바로 시모나다역이 모티브이다.
+
+아무래도 시모나다역만 제작하면 뭔가 부족할수 있기때문에  시모나다역의 부족한점을 찾아서 물품 혹은 건물들을 추가할 예정이다 
+
+시모나다역에 매력적인 이야기를 추가하면 대략적인 미니맵의 형태가 나올수도 있겠다
+
+## 3.느낀점
+
+사실 지금도 사전조사를 하면서 이야기를 머릿속으로 생각을 하는데 이게 과연 구현이 될수 있을까? 라는 엄청난 고민에 빠져버렸다 
+
+이야기와 컨셉 짜내면 억지로 머리를 쥐어싸메면서 할수있을것 같은데 문제는 막상 구상은 다했는데 구상했던 것과 다르게 나올거 같아서 문제다
+
+지금까지 unreal 프로그램으로 무료 에셋을 써서 맵을 만들었는데 만약 무료중에셋 중에서도 구상한거랑 매치가 안되는것들이 많을것이다 
+
+그럴때는 어떻게 해야할까..라는 고민도 하고있다. 물론 만들면 다 해결되 라고 하시겠지만 사실 이 짧지도 길지도 않은 일정들안에 완성할수 있을지도 의문이다
+
+어찌됬는 이미 주사위는 굴려졌고 한번 해봐야겠다 막상 하다보면 별거 아닐수도 있겠다 라는 생각이 들기도 한다.
