--- a/2023.09.01.TIL.md
+++ b/2023.09.01.TIL.md
@@ -14,7 +14,7 @@
 
 ## 2.레벨디자인에 스토리추가 
 
-
+![수중기차역](https://github.com/kdw1234/TIL/assets/57427834/9530d576-0bd4-4074-bc96-81b6f9272c83)
 
 사실 여기서 정말로 고민을 하고 머리를 쥐어싸면서 적었던거 같다 스토리를 적었을때 
 
