--- a/2023.09.01.TIL.md
+++ b/2023.09.01.TIL.md
@@ -2,6 +2,9 @@
 
 ## 1.레벨디자인을 위한 참고자료 찾기
 
+![기차역 참고자료2](https://github.com/kdw1234/TIL/assets/57427834/d56830ce-267a-47fb-a118-75ddb2602e52)
+
+
 처음에는 시모나다역 에서 건물만 몇개 추가하는 형식으로 생각을했다 하지만 아무리 생각해봐도 규모가 작을거 같았다 
 
 하지만 시모나다역의 바다뷰 를 포기하기는 싫었다 그래서 사람들이 기차역을 일러스트로 그린 작품들을 몇개 찾아보았다 
