--- a/2023.09.12.TIL.md
+++ b/2023.09.12.TIL.md
@@ -1,3 +1,19 @@
-## 1.
+## 1.주거공간에 집 배치
+마을에서 가장 많은 부분을 차지 하는 주거공간에 집을 배치하였다 원래 계획은 마을 중앙에 있는 광장에 나무를 배치 할 계획이었는데
 
-## 2.
+생각보다 엄청 큰 나무의 에셋을 구하는 일은 정말로 찾기가 어려웠다 그렇다고 조그마한 나무를 크게 키워서 배치해버리면 어색할거 같아서 
+
+그 계획은 다음으로 미루기로 하고 일단은 주거공간을 만들기로 하였다 마침또 에셋을 뒤적거리던중에 알맞은 집 에셋을 찾아서 배치해보니까 
+
+정말로 잘 어울렸다 하지만 빌라 배치는 완료하였으나 주택을 배치하고싶었는데 그 안의 에셋들은 전부다 빌라였고 한개가 주택이었다 
+
+일단은 또다른 집 에셋을 찾기 전까지는 임시로 같은 집들을 배치 해 놓았다
+
+## 2.마을바닥 변경 및 크기 변경
+막상 주거공간에 배치를 해보니까 기존에 생각했던 마을의 규모가 작다 라는 생각을 하였다 그리하여 지금의 마을의 크기를 조금더 키웠다 
+
+그리고 마을 바닥이 임시로 흰색으로 적용을 해놓아서 바로 바닥을 변경하였다 그냥 박스 하나로 퉁칠려고 했지만 재질이 찢어지는 느낌이 바로 나서 
+
+박스 여러개를 배치하여 마을 바닥을 변경하였다 사실 지오메트릭으로 해도되지만 사실 그냥 귀찮았다 
+
+
