--- a/2023.09.13.TIL.md
+++ b/2023.09.13.TIL.md
@@ -15,4 +15,6 @@
 
 미완성이다 구조물은 완성을 하였지만 주변 물체를 몇번 배치하고 제거를 했는지 모르겠다 정작 배치를 하면 잘어울리는거 같은데 몇분 지나고 다시보면
 
-뭔가 어색한 느낌을 받는다 그래서 오후에는 이작업을 계속해서 반복한거같다 빨리 구상을해서 제작을 하여야 겠다
+뭔가 어색한 느낌을 받는다 그래서 오후에는 이작업을 계속해서 반복한거같다 빨리 구상을해서 제작을 하여야겠다.
+
+![image](https://github.com/kdw1234/TIL/assets/57427834/f6bec153-2e5d-4ac5-aa73-183128177538)
