--- a/2023.10.04,TIL.md
+++ b/2023.10.04,TIL.md
@@ -1,2 +1,16 @@
 # 1.구역 전체 스케일 조정 및 스케일 기획서에 입력
 
+![C area](https://github.com/kdw1234/TIL/assets/57427834/2686116c-4c3d-4a13-ab85-3501e0759375)
+
+전체 맵의 구상은 끝이 나였다 하지만 기획서를 다시 면밀히 보면서 다시 관찰한 결과 벽과 벽사이의 넓이가
+
+기획서와 맞지 않는 부분이있다 그래서 맵의 스케일을 조정하였다 조정하면서 전체 맵의 스케일을 조정하기로 하였다 
+
+처음에는 그렇게 어려운일은 아닐지도.. 라는 생각이 들었다 하지만 스케일을 입력하면서 미제조정하기란 여간 힘들다..
+
+기획서를 작성하면서 많은 일이 있었다 다 뒤엎고 다른거 할까 생각도 해보았고 아니면 남은 안중에도 없이 그냥 기획서를 작성할까..
+
+많은 생각을 해보았지만 마땅히 뾰족한 수가 없어서 그냥 지금 있는 기획서에서 살만 더하는 방향으로 가기로 결정하였다
+
+
+
