--- a/2023.10.05.TIL.md
+++ b/2023.10.05.TIL.md
@@ -1,2 +1,4 @@
 ## 1.시퀀스 를 사용하여 파티클이 나오도록 적용 
 ![시퀀스](https://github.com/kdw1234/TIL/assets/57427834/6f491604-fbe9-4efb-a5c8-c0696462f10d)
+
+![시퀀스1](https://github.com/kdw1234/TIL/assets/57427834/0e5a6ba7-23b4-4827-939c-5f9b3839a367)
