--- a/2023.10.05.TIL.md
+++ b/2023.10.05.TIL.md
@@ -2,3 +2,6 @@
 ![시퀀스](https://github.com/kdw1234/TIL/assets/57427834/6f491604-fbe9-4efb-a5c8-c0696462f10d)
 
 ![시퀀스1](https://github.com/kdw1234/TIL/assets/57427834/0e5a6ba7-23b4-4827-939c-5f9b3839a367)
+
+
+시퀀스와 파티클을 함께 이용하여 음악효과에 맞춰서 파티클이 나오게끔 설정하였다 
