--- a/2023.10.06.TIL.md
+++ b/2023.10.06.TIL.md
@@ -1,1 +1,5 @@
-## unreal 시퀀스 고퀄리티 Export
+## unreal 시퀀스 고퀄리티 Export 및 davinci resolve를 이용하여 동영상 조정
+![export](https://github.com/kdw1234/TIL/assets/57427834/38a89632-2294-44be-b9a1-66f994992423)
+
+
+
