--- a/2023.10.06.TIL.md
+++ b/2023.10.06.TIL.md
@@ -1,5 +1,12 @@
 ## unreal 시퀀스 고퀄리티 Export 및 davinci resolve를 이용하여 동영상 조정
 ![export](https://github.com/kdw1234/TIL/assets/57427834/38a89632-2294-44be-b9a1-66f994992423)
 
+![다빈치](https://github.com/kdw1234/TIL/assets/57427834/254972bc-f673-4eeb-a43e-ecb3de62bc03)
+
+많은 편집영상 프로그램도 써봤고 포토샵을 이용하여 보정 작업도 해보았다 하지만 이번 davinci resolve 라는 프로그램은
+
+정말 많은 프로그램을 봐왔던 사람으로 이건 혁신이다.. 수많은 기능들이 담겨있고 사용하기 편리하다 무엇보다 큰장점은 무료다.
+
+이것만으로 이 프로그램을 써야하는 존재는 충분하다 아무래도 이 프로그램은 앞으로 계속 애용하면서 사용할거 같다
 
 
