--- a/2023.10.11.TIL.md
+++ b/2023.10.11.TIL.md
@@ -6,6 +6,11 @@ get(읽기)
 
 입력,출력,기능
 
+![image](https://github.com/kdw1234/TIL/assets/57427834/1bf65b68-ab93-43ee-8919-26f38d4979a4)
+
+
 사칙연산
 
 더하기,빼기,곱하기,나누기
+
+![image](https://github.com/kdw1234/TIL/assets/57427834/e4a3bde7-c33a-4aae-be37-cd815b76340f)
