--- a/2023.10.11.TIL.md
+++ b/2023.10.11.TIL.md
@@ -1,4 +1,4 @@
-## 1.GEt,SEt 함수
+# 1.GEt,SEt 함수
 
 set(쓰다)
 
@@ -9,8 +9,46 @@ get(읽기)
 ![image](https://github.com/kdw1234/TIL/assets/57427834/1bf65b68-ab93-43ee-8919-26f38d4979a4)
 
 
-사칙연산
+## 사칙연산
 
 더하기,빼기,곱하기,나누기
 
 ![image](https://github.com/kdw1234/TIL/assets/57427834/e4a3bde7-c33a-4aae-be37-cd815b76340f)
+
+
+## 비교연산
+
+1.Less(<)
+
+2.LessEqual(<=)
+
+3.Greater(>)
+
+4.Greater Equal(>=)
+
+5.Equal(==)
+
+6.!=
+
+![image](https://github.com/kdw1234/TIL/assets/57427834/377c7250-2cdf-47a9-912c-12be6d80a2cc)
+
+
+## 논리연산
+
+AND:두개의 bool 값이 전부 true 일경우 결과값은 true 로 나온다
+OR:두개중의 값이 하나라도 true 일경우 false 로 나온다 
+NOT:값을 반전시켜준다
+XOR:두개의 조건중에 하나만 참일 경우
+
+
+Min:입력받은 값중 가장 작은값을 반환
+max 입력받은 값중 가장 큰갑으로 반환
+
+
+## 반복문
+
+while loop
+for loop
+
+![image](https://github.com/kdw1234/TIL/assets/57427834/6dafceb0-4f21-4631-9bf8-a693e19ff1fb)
+
