--- a/2023.10.11.TIL.md
+++ b/2023.10.11.TIL.md
@@ -48,7 +48,10 @@ max 입력받은 값중 가장 큰갑으로 반환
 ## 반복문
 
 while loop
+
 for loop
 
-![image](https://github.com/kdw1234/TIL/assets/57427834/6dafceb0-4f21-4631-9bf8-a693e19ff1fb)
+반복문을 이용하여 구구단 출력하기
+
+![image](https://github.com/kdw1234/TIL/assets/57427834/5db2869d-37a4-4b02-85a8-ffefc61a336d)
 
