--- a/2023.10.12.TIL.md
+++ b/2023.10.12.TIL.md
@@ -17,3 +17,21 @@ b. 1:walk
 c. 2:run
 d. 3:attack
 e  4:dead
+
+
+# 이때 까지 배운것들을 활용하여 가위바위보를 활용한 간단한 게임 만들기
+![게임실행](https://github.com/kdw1234/TIL/assets/57427834/e74e96ad-5a4b-428b-b929-b011ba2b34b4)
+
+
+![hp 표기](https://github.com/kdw1234/TIL/assets/57427834/efca8144-04ec-4394-be02-ab92419b4f12)
+
+
+![키입력](https://github.com/kdw1234/TIL/assets/57427834/8f207d19-d680-494f-86bd-4c8aba151501)
+
+
+![컴퓨터 공격처리](https://github.com/kdw1234/TIL/assets/57427834/f2919e2b-a952-4c71-a35f-086678e83bf2)
+
+
+![플레이어 공격처리](https://github.com/kdw1234/TIL/assets/57427834/cc1f805e-4224-4c71-b5fa-07cacea10465)
+
+
