--- a/2023.10.13.TIL.md
+++ b/2023.10.13.TIL.md
@@ -6,4 +6,19 @@
 
 검색 연산은 빠르지만 추가/삭제 연산이 느리다 
 
+*****
+
 ![image](https://github.com/kdw1234/TIL/assets/57427834/9bbbdd42-a75b-4ecc-9e88-418ec26dfdb3)
+
+*****
+
+배열을 이용한 로또번호 생성기 
+![image](https://github.com/kdw1234/TIL/assets/57427834/84586350-9f1b-4616-9bd1-65831c3d1708)
+
+
+## 구조체
+
+여러 데이터 타입이 조합된 종합 데이터 타입
+
+
+![image](https://github.com/kdw1234/TIL/assets/57427834/f0f161ad-2e56-4b3d-af7b-cceaedf6ae32)
