--- a/2023.10.18.TIL.md
+++ b/2023.10.18.TIL.md
@@ -23,3 +23,12 @@ anim graph
   output pose
   
   transaction:상태의 변경
+
+
+  ![image](https://github.com/kdw1234/TIL/assets/57427834/803f269d-7045-4d5d-a84d-a7b348924757)
+
+  # 애니메이션 몽타주
+
+  ## 영화나 사진 편집 구성의 한 방법
+    따로따로 촬영한 화면을 적절하게 떼어 붙여서 하나의 긴밀하고도 새로운 장면이나 내용으로 만드는일
+
