--- a/2023.10.19.TIL.md
+++ b/2023.10.19.TIL.md
@@ -1,3 +1,20 @@
 # Notifies
 
 애니메이션 특정 프레임에 사운드,이펙트,코드를 실행
+
+![image](https://github.com/kdw1234/TIL/assets/57427834/c0c40003-5910-498b-8c14-0819f6dfbbd7)
+
+# 충돌처리 
+
+Ignore/Overlap/Block
+
+![image](https://github.com/kdw1234/TIL/assets/57427834/028958a8-53c7-437d-b110-067e04910e13)
+
+# 레이 캐스팅
+
+광선(Ray)을 발사해서 충돌하는 대상을 탐지한다
+
+Line Trace
+
+![image](https://github.com/kdw1234/TIL/assets/57427834/c267591e-ae40-4d12-b7fb-541935de1ad1)
+
