--- a/2023.10.23.TIL.md
+++ b/2023.10.23.TIL.md
@@ -1,4 +1,20 @@
 # 1.방탈출 기획서 수정
 
-1-1 B 구역과 C 구역의 기믹수행 방식을 수정
+## B 구역과 C 구역의 기믹수행 방식을 수정
+
+![image](https://github.com/kdw1234/TIL/assets/57427834/30e79a03-e0c0-4153-86fd-88379d97790f)
+
+![image](https://github.com/kdw1234/TIL/assets/57427834/f185c190-ac8f-4157-8687-50d0b90c3dbf)
+
+수정하기전 B구역과 C구역은 정말 뭐가 많이 비어보였다 그래서 지금있는것에서 조금더 추가하거나 변형시켰다 
+
+C구역 미로는 저번 코딩시간에 배웠던걸 응용하여 기능을 추가하였다 미로를 짜고 있었는데 문득 든 생각은 
+
+'미로 구역 크기도 정했었나..?' 라는 의문을 가지게 되었고 확인 결과 미로의 크기를 정하지 않은것이 확인 되었다
+
+맵크기는 다 정해놓고 정작 미로는 정하지 않은것이다.. 많은 고민을 한결과 내일도 많지는 않지만 시간이 남기 때문에 
+
+오늘은 B구역과 C구역의 기믹수행 방식을  확실하게 정하기로 했다.. 기획서를 꼼꼼히 확인했으면 이런일은 없는데..
+
+다음부턴 기획서를 조금서 상세히 확인해 봐야겠다
 
