--- a/2023.10.24.TIL.md
+++ b/2023.10.24.TIL.md
@@ -2,6 +2,7 @@
 
 ![image](https://github.com/kdw1234/TIL/assets/57427834/156dbfd9-ea8a-4b4e-a22b-54d7f52cb62c)
 
+script 를 이용하여 cube 에서 빨간색,초록색,파란색이 번갈아가면서 나오게끔 코딩
 ![image](https://github.com/kdw1234/TIL/assets/57427834/3db00191-c95e-4ec6-a1e2-c394d92e1458)
 
 script 를 이용하여 신호등 만드는 코딩
