--- a/2023.11.14.TIL.md
+++ b/2023.11.14.TIL.md
@@ -12,3 +12,6 @@ get player charater 를 작성을 해야하는데 잘못하고 get player contro
 
 
 ![image](https://github.com/kdw1234/TIL/assets/57427834/ddee2f4d-66b7-4f95-9d58-f492791685fe)
+
+
+![image](https://github.com/kdw1234/TIL/assets/57427834/bf16258c-71ee-4d51-8ef5-999c55b9d709)
